--- a/style.css.scss
+++ b/style.css.scss
@@ -1,4 +1,8 @@
-body
+$zindex: (
+	layer1: 1000,
+	layer2: 2000,
+	layer3: 3000
+);
 
 .jumbotron {
 	height: 300px;
@@ -12,11 +16,26 @@ body
 	.headshot {
 		width: 128px;
 		height: 128px;
-		display: inline-block;
+		margin-top: 2em;
+		position: absolute;
+	}
+
+	.masthead-name {
+		top: 75;
+		right: -150;
+		position: relative;
+
 	}
 
 	.headshot,
 	.masthead-name {
 		display: inline-block;
+		z-index: 1;
+	}
+
+	.masthead-nav {
+		top: 75;
+		position: relative;
+		right: -125;
 	}
 }
